--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: left;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  background-color: #ffffff;
+  margin: 0 auto;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding-left: 50px;
   font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.App-title{
+  font-weight: 700;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  list-style-type: none;
+}
+
+.post:after {
+  margin-bottom: 2em;
+}
+
+.post h4 {
+  font-size: 2rem;
+  color: #ffffff;
+}
+
+.dropdown {
+  text-align: left;
+  padding-left: 35px;
+}
+
+select {
+  position: relative;
+  width: 11em;
+  height: 2em;
+  border-radius: .25em;
+  padding-left: 5px;
+  font-weight: 600;
+}
+
+.drop-title{
+  font-size: large;
+  padding-left: 15px;
+  padding-right: 5px;
+  font-weight: 600;
+}
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  grid-gap: 5px;
+}
+
+.list .grid {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.list .item {
+  height: 350px;
+  padding: 10px;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.item .day {
+  width: 12%;
+  height: 15%;
+  top: 5px;
+  left: 25px;
+  position: absolute;
+  font-size: 35px;
+  text-align: center;
+  border: solid 1px #ffffff;
+  border-radius: 5px;
+  color: #ffffff;
+}
+.item .description {
+  position:absolute;
+  color: #ffffff;
+  font-size: 35px;
+  bottom: 1px;
+  left: 25px;
 }
