--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,16 @@ select {
   padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.item .image {
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .item .day {
