--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,8 @@ select {
 }
 
 .item .day {
-  width: 12%;
-  height: 15%;
+  width: 50px;
+  height: 50px;
   top: 5px;
   left: 25px;
   position: absolute;
@@ -96,7 +96,7 @@ select {
 
 .item .favourite {
   position: absolute;
-  top: 10%;
+  top: 11%;
   right: 5%;
   pointer-events: auto;
 }
